OmniJaws: Add in metric wind speed options and also wind direction pin wheel switches
Change-Id: Ie353cee359a4a9f4684ba0fcae1c17b0f9ea4c29

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,6 +17,13 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <string name="weather_windspeed_metric_units">Windspeed (metric) display units</string>
+    <string name="weather_windspeed_metric_units_summaryOn">Windspeed is displayed in meters/second (m/s)</string>
+    <string name="weather_windspeed_metric_units_summaryOff">Windspeed is displayed in km/hours (km/h)</string>
+    <string name="weather_winddirection_display_title">Wind direction display</string>
+    <string name="weather_winddirection_display_summaryOn">Wind direction is displayed using pinwheel directions</string>
+    <string name="weather_winddirection_display_summaryOff">Wind direction is displayed using angular directions</string>
+
     <string name="app_name" translatable="false">OmniJaws</string>
     <string name="provider_title">Weather provider</string>
     <string name="units_title">Unit</string>
